--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <meta charset="utf-8"/>
     <head>
         <img src="resources/Images/soul-red.png" id="redSoul">
-        <img src="resources/Images/soul-blue.png" id="redSoul">
+        <img src="resources/Images/soul-blue.png" id="blueSoul">
         <img src="resources/Images/fight-eye.png" id="fightEye">
         <link rel="stylesheet" href="styles.css" type="text/css">
-        <Title>Undertale Sim Alpha 1</Title>
+        <Title>Undertale Sim Alpha 1.1</Title>
     </head>
     <body>
         <canvas id="game"></canvas>
