more preliminary stuff- just gotta add the object

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     </head>
     <body>
         <canvas id="game"></canvas>
-        <script src="javascript/main.js"></script>
         <script src="javascript/soulMvmt.js"></script>
+        <script src="javascript/objectMvmt.js"></script>
+        <script src="javascript/main.js"></script>
     </body>
 </html>
