--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <img src="resources/Images/soul-red.png" id="redSoul">
         <img src="resources/Images/soul-blue.png" id="blueSoul">
         <img src="resources/Images/fight-eye.png" id="fightEye">
+
+        <img src="resources/Images/bone-tip.png" id="boneTip">
+        <img src="resources/Images/bone-chunk.png" id="boneChunk">
         <link rel="stylesheet" href="styles.css" type="text/css">
-        <Title>Undertale Sim Alpha 1.2</Title>
+        <Title>Undertale Sim Alpha 2</Title>
     </head>
     <body>
         <canvas id="game"></canvas>
