started working on a real battle

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <canvas id="game"></canvas>
         <script src="javascript/soulMvmt.js"></script>
         <script src="javascript/objectMvmt.js"></script>
+        <script src="javascript/attacks.js"></script>
         <script src="javascript/main.js"></script>
     </body>
 </html>
