--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <img src="resources/Images/bone-tip.png" id="boneTip">
         <img src="resources/Images/bone-chunk.png" id="boneChunk">
         <link rel="stylesheet" href="styles.css" type="text/css">
-        <Title>Undertale Sim Alpha 2</Title>
+        <Title>Undertale Sim Beta 1</Title>
     </head>
     <body>
         <canvas id="game"></canvas>
