blue attack and karma

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
         <img src="resources/Images/bone-tip.png" id="boneTip">
         <img src="resources/Images/bone-chunk.png" id="boneChunk">
+
+        <img src="resources/Images/blue-bone-tip.png" id="blueBoneTip">
+        <img src="resources/Images/blue-bone-chunk.png" id="blueBoneChunk">
+
         <link rel="stylesheet" href="styles.css" type="text/css">
         <Title>Undertale Sim Beta 1</Title>
     </head>
