work on other menus

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         <img src="resources/Images/blue-bone-chunk.png" id="blueBoneChunk">
 
         <link rel="stylesheet" href="styles.css" type="text/css">
-        <Title>Undertale Sim Beta 1</Title>
+        <Title>Undertale Sim Beta 2</Title>
     </head>
     <body>
         <canvas id="game"></canvas>
         <script src="javascript/soulMvmt.js"></script>
         <script src="javascript/objectMvmt.js"></script>
         <script src="javascript/attacks.js"></script>
+        <script src="javascript/actEtc.js"></script>
         <script src="javascript/main.js"></script>
     </body>
 </html>
